--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_sign_in: ^5.2.1
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   awesome_dialog: ^2.1.1
+  dio: ^4.0.0
+  auto_size_text: ^3.0.0
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
