--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^4.0.0
   auto_size_text: ^3.0.0
   clipboard: ^0.1.3
+  onesignal_flutter: ^3.2.4
 
 dev_dependencies:
   flutter_test:
